fixed card title spacing

--- a/src/components/components.css
+++ b/src/components/components.css
@@ -159,6 +159,7 @@ ul a:hover {
 }
 
 .card_title {
+    margin-top: 2em;
     font-size: 1.5rem;
     color: red;
 }
